Rewrite WIP: Desktop works

--- a/src/main/g8/default.properties
+++ b/src/main/g8/default.properties
@@ -2,5 +2,6 @@ name=My Game
 package=my.game.pkg
 api_level=21
 scala_version=2.11.5
-libgdx_version=1.5.2
+libgdx_version=1.7.0
+robovm_version=1.8.0
 verbatim=*.png
